--- a/test_random_number.ipynb
+++ b/test_random_number.ipynb
@@ -15,6 +15,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "a = np.array(np.arange(6)).reshape(2,3)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -33,8 +44,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython2"
   }
  },
  "nbformat": 4,
