some random output

--- a/test_random_number.ipynb
+++ b/test_random_number.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is a random number:  57\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "print(\"this is a random number: %3d\" % random.randint(1,101))"
@@ -12,13 +20,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2]\n",
+      " [3 4 5]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "a = np.array(np.arange(6)).reshape(2,3)\n",
     "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2 3]\n",
+      " [4 5 6 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.array(np.arange(8)).reshape(-1,4)\n",
+    "print(b)"
    ]
   },
   {
@@ -44,7 +80,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
