--- a/test_random_number.ipynb
+++ b/test_random_number.ipynb
@@ -59,6 +59,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[12 16 20]\n",
+      " [15 21 27]\n",
+      " [18 26 34]\n",
+      " [21 31 41]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = b.T.dot(a)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
