--- a/test_random_number.ipynb
+++ b/test_random_number.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "this is a random number:  57\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "print(\"this is a random number: %3d\" % random.randint(1,101))"
@@ -20,18 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0 1 2]\n",
-      " [3 4 5]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "a = np.array(np.arange(6)).reshape(2,3)\n",
@@ -40,18 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0 1 2 3]\n",
-      " [4 5 6 7]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "b = np.array(np.arange(8)).reshape(-1,4)\n",
     "print(b)"
@@ -59,20 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[12 16 20]\n",
-      " [15 21 27]\n",
-      " [18 26 34]\n",
-      " [21 31 41]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = b.T.dot(a)\n",
     "print(c)"
@@ -83,7 +46,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "d = a.T.dot(b)"
+   ]
   }
  ],
  "metadata": {
@@ -101,8 +66,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython2"
   }
  },
  "nbformat": 4,
