--- a/test_random_number.ipynb
+++ b/test_random_number.ipynb
@@ -47,8 +47,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = a.T.dot(b)"
+    "d = a.T.dot(b)\n",
+    "print d"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
