--- a/test_random_number.ipynb
+++ b/test_random_number.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is a random number:  69\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "print(\"this is a random number: %3d\" % random.randint(1,101))"
@@ -12,9 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2]\n",
+      " [3 4 5]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "a = np.array(np.arange(6)).reshape(2,3)\n",
@@ -23,9 +40,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2 3]\n",
+      " [4 5 6 7]]\n"
+     ]
+    }
+   ],
    "source": [
     "b = np.array(np.arange(8)).reshape(-1,4)\n",
     "print(b)"
@@ -33,9 +59,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[12 16 20]\n",
+      " [15 21 27]\n",
+      " [18 26 34]\n",
+      " [21 31 41]]\n"
+     ]
+    }
+   ],
    "source": [
     "c = b.T.dot(a)\n",
     "print(c)"
@@ -43,12 +80,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "d = a.T.dot(b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -66,7 +110,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
